--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,128 @@
+/* Basic */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body {
   min-width: 290px;
-  background-color: black;
 }
-body {
-  display: flex;
-}
+
+/* NavBar */
 #navbar {
-  font-family: "Courier New", Courier, monospace;
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
+  padding-bottom: 10px;
   min-width: 290px;
   width: 305px;
-  border-right: solid red;
+  border-right: 1px solid black;
 }
+
 #navbar header {
-  color: red;
   text-align: center;
   font-size: 25px;
-  border-bottom: 1px solid red;
+  border: 1px solid black;
+  margin: 10px;
 }
+
 #nav-ul {
   overflow-y: auto;
   overflow-x: hidden;
   list-style: none;
   height: 90%;
+  margin: 10px;
+  border: 1px solid black;
 }
+
 #nav-ul a {
-  text-decoration: none;
-  color: #106bed;
-  font-size: 25px;
+  font-size: 20px;
 }
+
 #nav-ul li {
-  border-bottom: 1px solid white;
   width: 100%;
   padding: 20px;
 }
+
+/* Main */
 #main-doc {
-  color: white;
   position: absolute;
   left: 0;
   right: 0;
-  margin-left: 310px;
-  padding: 20px;
-  margin-bottom: 110px;
+  margin-left: 320px;
+  margin-top: 10px;
+  border: 1px solid black;
 }
-#main-doc h2 {
-  color: #106bed;
-  text-decoration: underline;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 35px;
-}
+
 #main-doc section {
   padding: 20px;
   margin: 20px;
-  border-bottom: 1px solid red;
 }
+
+#main-doc section ul {
+  margin: 10px;
+  margin-left: 20px;
+}
+
+#main-doc section p {
+  margin: 10px;
+}
+
+#main-doc section h3 {
+  margin-bottom: 10px;
+}
+
+#main-doc section code {
+  display: block;
+  background-color: black;
+  color: white;
+  font-size: 15px;
+  margin: 5px;
+  padding: 2px;
+}
+
+#main-doc section div {
+  background-color: black;
+}
+
+#main-doc #learn {
+  text-align: center;
+  margin-top: 50px;
+}
+
+/* Media Queries Mobile */
 @media only screen and (max-width: 600px) {
   #navbar {
-    max-height: 360px;
+    max-height: 380px;
     width: 100%;
     position: absolute;
     top: 0;
     padding: 0;
     margin: 0;
-    padding: 10px;
     border: none;
   }
+
   #nav-ul {
-    width: 100%;
     height: 280px;
   }
+
   #nav-ul a {
-    font-size: 1.5rem;
+    font-size: 15px;
   }
+
   #main-doc {
-    border-top: 4px solid white;
     position: relative;
     margin-top: 380px;
     margin-left: 0;
+    border: 0;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #main-doc {
+    border: 0;
   }
 }
